--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-        title Haven Tracker
+        title Guards Tracker
         link(rel="manifest" href="/manifest.json")
         script.
             if ('serviceWorker' in navigator) {
@@ -30,7 +30,7 @@ html(lang="en")
                 button.digit 1
                 button.digit 2
                 button.digit 3
-                button.summon *
+                button.color-selection.orange
                 button.digit 0
                 button.skip
             
