--- a/src/style.styl
+++ b/src/style.styl
@@ -11,6 +11,7 @@ html, body, .input, .display
     margin: 0;
     padding: 0;
     user-select: none;
+    overflow: hidden;
 
 body
     padding: 8px;
@@ -51,10 +52,16 @@ button
     font-size: 1em;
 
 .initiative-preview button.with-summon
-    border:  4px solid blue;
+    border:  4px solid deepskyblue;
 
-.summon.active
-    border:  4px solid blue;
+.digits .active
+    border:  4px solid brown;
+
+#orange, .orange
+    background-color: orange;
+
+#blue, .blue
+    background-color: deepskyblue;
 
 .initiative-entries
     list-style: none;
@@ -72,7 +79,7 @@ button
         font-size: 1.4em;
 
         &.active 
-            background-color: lightblue;
+            border: 8px solid brown;
         
 
 .confirmation
