Add initiative counter

--- a/src/index.pug
+++ b/src/index.pug
@@ -36,7 +36,9 @@ html(lang="en")
             
             .preview
                 .initiative-preview
-                button.confirmation &#x2705;
+                .confirmation-group
+                    button.confirmation &#x2705;
+                    .initiative-count 0
         .display
             ul.initiative-entries
 
